# num2tib

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/num2tib/: __init__.py  core.py
tests/: test.py
