[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "num2tib"
version = "0.0.1"
authors = [
  { name="Tenzin Gayche", email="gaychetenzin@monlam.ai" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "openpecha>=0.8.21",
  "pyewts"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]



[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
